--- a/index.html
+++ b/index.html
@@ -14,24 +14,27 @@
         </div>
         <div class="item-2 grid-container2">
             <p class="item-2-1"> Регистрация на путешествие</p>
-            <form class="registration">
-                <div class="item-2-2">
-                    <label for="name">Имя</label>
-                    <input type="text" id="name">
-                </div>
-                <div class="item-2-3">
-                    <label for="surname">Фамилия</label>
-                    <input type="text" id="surname">
-                </div>
-                <div class="item-2-4">
-                    <label for="date">Дата рождения</label>
-                    <input type="text" id="date">
-                </div>
-                <div class="item-2-5">
-                    <label for="number">Номер телефона</label>
-                    <input type="text" id="number">
-                </div>
-                <button>Зарегистрироваться</button>
+            <div class="item-2-2">
+                <label for="name">Имя</label>
+                <br>
+                <input type="text" id="name">
+            </div>
+            <div class="item-2-3">
+                <label for="surname">Фамилия</label>
+                <br>
+                <input type="text" id="surname">
+            </div>
+            <div class="item-2-4">
+                <label for="date">Дата рождения</label>
+                <br>
+                <input type="text" id="date">
+            </div>
+            <div class="item-2-5">
+                <label for="number">Номер телефона</label>
+                <br>
+                <input type="text" id="number">
+            </div>
+            <button class="item-2-6">Зарегистрироваться</button>
         </div>
         <div class="item-3">
             <p>Copyright©</p>
