--- a/index.html
+++ b/index.html
@@ -9,44 +9,47 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="item-1">
+        <header class="item-1">
             <h1>Енилеев Ислам Русланович, группа 201-321, лабороторная работа №2</h1>
-        </div>
-        <div class="item-2 grid-container2">
-            <p class="item-2-1"> Регистрация на путешествие</p>
-            <div class="item-2-2">
+        </header>
+        <div class="item-2">
+            <h2> Регистрация на путешествие</h2>
+            <div>
                 <label for="name">Имя</label>
                 <br>
                 <input type="text" id="name">
             </div>
-            <div class="item-2-3">
+            <div>
                 <label for="surname">Фамилия</label>
                 <br>
                 <input type="text" id="surname">
             </div>
-            <div class="item-2-4">
+            <div>
                 <label for="date">Дата рождения</label>
                 <br>
                 <input type="text" id="date">
             </div>
-            <div class="item-2-5">
+            <div>
                 <label for="number">Номер телефона</label>
                 <br>
                 <input type="text" id="number">
             </div>
-            <button class="item-2-6">Зарегистрироваться</button>
+            <button>Регистрация</button>
         </div>
-        <div class="item-3">
+        <div class="item-3 grid-container-2">
+            <h1 class="item-2-1">Галерея изображений</h1>
+            <img class="item-2-2" src='img/img1.jpg'>
+            <img class="item-2-3" src='img/img2.jpg'>
+            <img class="item-2-4" src='img/img3.jpg'>
+            <img class="item-2-5" src='img/img4.jpg'>
+            <img class="item-2-6" src='img/img1.jpg'>
+            <img class="item-2-7" src='img/img2.jpg'>
+            <img class="item-2-8" src='img/img3.jpg'>
+            <img class="item-2-9" src='img/img4.jpg'>
+        </div>
+          <footer class="item-4">
             <p>Copyright©</p>
-        </div>
-        <div class="item-4">
-            <p>Изображения</p>
-            <div class="flexbox">
-                <img src='img/img1.jpg'>
-                <img src='img/img2.jpg'>
-                <img src='img/img3.jpg'>
-                <img src='img/img4.jpg'>
-          </div>
+          </footer>
         </div>
     </div>
 </body>
